--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 							<header>
 								<h1>Hi. I'm <strong>Gizem Türker</strong>. <br>Jr. iOS Developer </h1>
 							</header>
-							<p>And I am graduated from Mechanical Engineering. I am learning Swift and SwiftUI. I completed CS50. While I am working Mechanical Engineering, I managed many fulfill project and team. I believe that my career life is successfully. I always love my job. Choices are changing, everything is changing.When I met iOS Developing, I found myself.</p>
+							<p>I am a self-taught iOS developer with a strong understanding of the Swift programming language, a passion for developing software and with Mechanical Engineering degree.</p>
+							<p>Long ago, it was my dream to do something in the software industry, while I have worked as a mechanical engineer. I decided that I should follow my passion and get involved in programming, so I quit my job and start learning Swift and SwiftUI.</p>
 
 						</div>
 					</div>
