--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 	</head>
 	<body>
-
-
-
-
 		<!-- Home -->
 			<div class="wrapper style1 first">
 				<article class="container" id="top">
 					<div class="row">
 						<div class="4u">
 							<span class="image fit"><img src="images/image-gizem.jpeg" alt="" /></span>
+							<div class="icns">
+								<a href="https://github.com/gizemturker"><img src="images/github.svg" width="56" height="56"></a>
+								<a href="https://www.twitter.com/gizemtrkerrr"><img src="images/twitter.svg" width="50" height="50"></a>
+								<a href="https://www.linkedin.com/in/gizem-t-328869b6/"><img src="images/linkedin.svg" width="50" height="50"></a>
+							</div>
 						</div>
 						<div class="8u">
 							<header>
@@ -44,45 +45,6 @@
 
 						</div>
 					</div>
-				</article>
-			</div>
-
-		<!-- Work -->
-			<div class="wrapper style2">
-				<article id="work">
-					<header>
-						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
-					</header>
-					<div class="container">
-						<div class="row">
-							<div class="4u">
-								<section class="box style1">
-									<span class="icon featured fa-comments-o"></span>
-									<h3>Consequat lorem</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-								</section>
-							</div>
-							<div class="4u">
-								<section class="box style1">
-									<span class="icon featured fa-camera-retro"></span>
-									<h3>Lorem dolor tempus</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-								</section>
-							</div>
-							<div class="4u">
-								<section class="box style1">
-									<span class="icon featured fa-thumbs-o-up"></span>
-									<h3>Feugiat posuere</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-								</section>
-							</div>
-						</div>
-					</div>
-					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#portfolio" class="button big scrolly">See some of my recent work</a>
-					</footer>
 				</article>
 			</div>
 
