--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 						<div class="4u">
 							<span class="image fit"><img src="images/image-gizem.jpeg" alt="" /></span>
 							<div class="icns">
-								<a href="https://github.com/gizemturker"><img src="images/github.svg" width="56" height="56"></a>
-								<a href="https://www.twitter.com/gizemtrkerrr"><img src="images/twitter.svg" width="50" height="50"></a>
-								<a href="https://www.linkedin.com/in/gizem-t-328869b6/"><img src="images/linkedin.svg" width="50" height="50"></a>
+								<a href="https://github.com/gizemturker" target="_blank"><img src="images/github.svg" width="56" height="56"></a>
+								<a href="https://www.twitter.com/gizemtrkerrr" target="_blank"><img src="images/twitter.svg" width="50" height="50"></a>
+								<a href="https://www.linkedin.com/in/gizem-t-328869b6/" target="_blank"><img src="images/linkedin.svg" width="50" height="50"></a>
 							</div>
 						</div>
 						<div class="8u">
