--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						</div>
 						<div class="8u">
 							<header>
-								<h1>Hi. I'm <strong>Gizem Türker</strong>. <br>Jr. iOS Developer </h1>
+								<h1>Hi. I'm <strong>Gizem Türker</strong>. <br> iOS Developer </h1>
 							</header>
 							<p>I am a self-taught iOS developer with a strong understanding of the Swift programming language, a passion for developing software and with Mechanical Engineering degree.</p>
 							<p>Long ago, it was my dream to do something in the software industry, while I have worked as a mechanical engineer. I decided that I should follow my passion and get involved in programming, so I quit my job and start learning Swift and SwiftUI.</p>
