--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<span class="image fit"><img src="images/image-gizem.jpeg" alt="" /></span>
 							<div class="icns">
 								<a href="https://github.com/gizemturker" target="_blank"><img src="images/github.svg" width="56" height="56"></a>
-								<a href="https://twitter.com/gizemtrkerrr" target="_blank"><img src="images/twitter.svg" width="50" height="50"></a>
+								<a href="https://twitter.com/gizemturkerdev" target="_blank"><img src="images/twitter.svg" width="50" height="50"></a>
 								<a href="https://www.linkedin.com/in/gizemturkerdev/"_blank"><img src="images/linkedin.svg" width="50" height="50"></a>
 							</div>
 						</div>
