--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 							<header>
 								<h1>Hi. I'm <strong>Gizem Türker</strong>. <br> iOS Developer </h1>
 							</header>
-							<p>I am a self-taught iOS developer with a strong understanding of the Swift programming language, a passion for developing software and with Mechanical Engineering degree.</p>
-							<p>Long ago, it was my dream to do something in the software industry, while I have worked as a mechanical engineer. I decided that I should follow my passion and get involved in programming, so I quit my job and start learning Swift and SwiftUI.</p>
-
+							<p>I am a self-taught iOS developer with a strong understanding of the Swift programming language, a passion for developing software, and with Mechanical Engineering bachelor of science and master's degree.</p>
+							<p>I made a radical decision long ago to continue my career as a SWE. I have started as an iOS Intern for understanding this industry "How it works for teams?" in a big freelance developer team. Besides, I attended the iOS Bootcamp to improve myself.</p>
+							<p>I support the community by moderating, organizing meet-ups, and writing technical articles. In the future, I want to create and maintain open-source projects.</p>
 						</div>
 					</div>
 				</article>
