article and projects pages added.

--- a/articles.html
+++ b/articles.html
@@ -40,16 +40,19 @@
 						</div>
 						<div class="8u">
 							<nav>
-								<a href="index.html" class="nav active">Home</a>
-								<a href="articles.html" class="nav">Articles</a>
+								<a href="index.html" class="nav">Home</a>
+								<a href="articles.html" class="nav active">Articles</a>
 								<a href="projects.html" class="nav">Projects</a>
 							</nav>
-							<header>
-								<h1>Hi. I'm <strong>Gizem Türker</strong>. <br> iOS Developer </h1>
-							</header>
-							<p>I am a self-taught iOS developer with a strong understanding of the Swift programming language, a passion for developing software, and with Mechanical Engineering bachelor of science and master's degree.</p>
-							<p>I made a radical decision long ago to continue my career as a SWE. I have started as an iOS Intern for understanding this industry "How it works for teams?" in a big freelance developer team. Besides, I attended the iOS Bootcamp to improve myself.</p>
-							<p>I support the community by moderating, organizing meet-ups, and writing technical articles. In the future, I want to create and maintain open-source projects.</p>
+							
+							<ul class="articles"> 
+								<li>06/21/2022 - <a target="_blank" class="link" href="https://medium.com/@gizemturker/solid-principles-41e7230719a7">SOLID Principles</a></li>
+								<li>06/19/2022 - <a target="_blank" class="link" href="https://medium.com/@gizemturker/methods-to-prevent-memory-leaks-in-ios-ce73596b90ec">Methods to prevent memory leaks in iOS</a></li>
+								<li>05/20/2022 - <a target="_blank" class="link" href="https://medium.com/@gizemturker/what-is-the-algorithm-7622c411c03b">What is the Algorithm?</a></li>
+								<li>05/07/2022 - <a target="_blank" class="link" href="https://medium.com/@gizemturker/what-is-viper-81930d3220e9">What is VIPER?</a></li>
+								<li>04/05/2022 - <a target="_blank" class="link" href="https://medium.com/@gizemturker/structures-classes-in-swift-2b1eab646329">Structures & Classes in Swift</a></li>
+
+							</ul>
 						</div>
 					</div>
 				</article>
