--- a/projects.html
+++ b/projects.html
@@ -40,16 +40,16 @@
 						</div>
 						<div class="8u">
 							<nav>
-								<a href="index.html" class="nav active">Home</a>
+								<a href="index.html" class="nav">Home</a>
 								<a href="articles.html" class="nav">Articles</a>
-								<a href="projects.html" class="nav">Projects</a>
+								<a href="projects.html" class="nav active">Projects</a>
 							</nav>
-							<header>
-								<h1>Hi. I'm <strong>Gizem Türker</strong>. <br> iOS Developer </h1>
-							</header>
-							<p>I am a self-taught iOS developer with a strong understanding of the Swift programming language, a passion for developing software, and with Mechanical Engineering bachelor of science and master's degree.</p>
-							<p>I made a radical decision long ago to continue my career as a SWE. I have started as an iOS Intern for understanding this industry "How it works for teams?" in a big freelance developer team. Besides, I attended the iOS Bootcamp to improve myself.</p>
-							<p>I support the community by moderating, organizing meet-ups, and writing technical articles. In the future, I want to create and maintain open-source projects.</p>
+
+							<div class="projects">
+								<div class="project"><img class="project_image" src="images/food.png" alt=""><a href="https://github.com/gizemturker/Gourmet"><img src="images/github.svg" width="24" height="24">Gourmet</a></div>
+								<div class="project"><img class="project_image" src="https://user-images.githubusercontent.com/17044304/167166513-b774dc18-f7f3-4dd2-b5de-f74c30337438.png" alt=""><a href="https://github.com/gizemturker/Netflix-Clone"><img src="images/github.svg" width="24" height="24">Netflix-Clone</a></div>
+								<div class="project"><img class="project_image" src="https://raw.githubusercontent.com/gizemturker/Calculator/main/ss.png" alt=""><a href="https://github.com/gizemturker/Calculator"><img src="images/github.svg" width="24" height="24">Calculator</a></div>
+							</div>
 						</div>
 					</div>
 				</article>
