link target fixed.

--- a/projects.html
+++ b/projects.html
@@ -46,9 +46,9 @@
 							</nav>
 
 							<div class="projects">
-								<div class="project"><img class="project_image" src="images/food.png" alt=""><a href="https://github.com/gizemturker/Gourmet"><img src="images/github.svg" width="24" height="24">Gourmet</a></div>
-								<div class="project"><img class="project_image" src="https://user-images.githubusercontent.com/17044304/167166513-b774dc18-f7f3-4dd2-b5de-f74c30337438.png" alt=""><a href="https://github.com/gizemturker/Netflix-Clone"><img src="images/github.svg" width="24" height="24">Netflix-Clone</a></div>
-								<div class="project"><img class="project_image" src="https://raw.githubusercontent.com/gizemturker/Calculator/main/ss.png" alt=""><a href="https://github.com/gizemturker/Calculator"><img src="images/github.svg" width="24" height="24">Calculator</a></div>
+								<div class="project"><img class="project_image" src="images/food.png" alt=""><a target="_blank" href="https://github.com/gizemturker/Gourmet"><img src="images/github.svg" width="24" height="24">Gourmet</a></div>
+								<div class="project"><img class="project_image" src="https://user-images.githubusercontent.com/17044304/167166513-b774dc18-f7f3-4dd2-b5de-f74c30337438.png" alt=""><a target="_blank" href="https://github.com/gizemturker/Netflix-Clone"><img src="images/github.svg" width="24" height="24">Netflix-Clone</a></div>
+								<div class="project"><img class="project_image" src="https://raw.githubusercontent.com/gizemturker/Calculator/main/ss.png" alt=""><a target="_blank" href="https://github.com/gizemturker/Calculator"><img src="images/github.svg" width="24" height="24">Calculator</a></div>
 							</div>
 						</div>
 					</div>
